fix content overflow

--- a/src/components/ContentContainer/content-container.css
+++ b/src/components/ContentContainer/content-container.css
@@ -2,6 +2,7 @@
 	display: grid;
 	grid-template-rows: 40px auto;
 	grid-template-columns: 50px auto;
+	/* overflow: hidden; */
 }
 
 .container-component > .title {
@@ -46,4 +47,7 @@
 	grid-column-start: 2;
 	grid-column-end: 3;
 	justify-self: start;
+
+	width: 100%;
+	height: 100%;
 }
